@@ -1,0 +1,3 @@
+MD5 29ef579131f97a8b2bdad77e14a619be rapidsvn-0.9.4.tar.gz 1057482
+RMD160 edbabab261b69acc78a2009f2da175b2b70c8987 rapidsvn-0.9.4.tar.gz 1057482
+SHA256 20c6a17ed91171bae6c3af7b611b0f91395cb2962fc0cfe1d66dfd5178d60651 rapidsvn-0.9.4.tar.gz 1057482
